<resources>
    <string name="app_name">OrderEntrySystem</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="action_double_order">Double Order</string>
    <string name="action_new_text">New File</string>
    <string name="action_get_first_order">Get First Order</string>

    <string-array name="chocolate_types">
        <item>Milk Chocolate</item>
        <item>Dark Chocolate</item>
        <item>White Chocolate</item>
    </string-array>
</resources>
