<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ian.orderentrysystem.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:icon="@drawable/ic_new_file"
        android:title="@string/action_new"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_new_text"
        android:orderInCategory="100"
        android:icon="@drawable/ic_new_file"
        android:title="@string/action_new_text"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_double_order"
        android:orderInCategory="100"
        android:title="@string/action_double_order"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_get_first_order"
        android:orderInCategory="100"
        android:title="@string/action_get_first_order"
        app:showAsAction="never" />


</menu>
